TB-2009-03-30-1: Bugfix:     Test for issue 619 now cleans up spool dir files
                 Enhancem:   SI use case test submits array jobs as performance
                             improvement
                 Review:     RH 

CR-2009-03-30-0: Enhancem.:  Allow larger timeouts for vi commands
                 Review:     AA

TB-2009-03-30-0: Bugfix:     Fixed cleanup for issue_633
                 Belongs To: RH-2009-03-30-0
                 Review:     RH 

JF-2009-03-30-0: Enhancem.:  Added test for issue 2876
                 Review:     AP

RH-2009-03-30-0: Enhancem.:  Hedeby: Added test for issue_633
                 Review:     TB 

CR-2009-03-24-0: Enhancem.:  added test for issue 2960
                 Review:     RD

RD-2009-03-24-0: Enhancem.:  Added test for issue 2963 and 2964
                 Review:     CR

EB-2009-03-24-0: Enhancem.:  Added additional JSV test 
                 Review:     MD

DG-2009-03-19-1: Cleanup:    Cleanup of test 2759 
                 Review:     CR

DG-2009-03-19-0: Enhancem.:  Added test for issue 2759
                 Review:     CR

RD-2009-03-18-0: Bugfix:     - fixed JSV tests on fast linux hosts and with mixed
                               architectures
                             - suspressed features supported logging for exclusive
                               test
                 Review:     EB

CR-2009-03-17-0: Bugfix:     hotfix - remove changes made by CR-2009-03-16-0
                             which break installation with classic spooling again
                             and fixed host related find output differences 
                 Belongs To: CR-2009-03-16-0
                 Review:     AF

RD-2009-03-17-0: Enhancem.:  Added test for exclusive complex
                 Review:     AA

LP-2009-03-17-0: Bugfix:     Added -no-jmx flag for GE 6.2 when no JMX port
                 Review:     TBD

EB-2009-03-16-0: Enhancent.: Added additional JSV test and fixed test