@@ -1,3 +1,9 @@
+CR-2009-03-30-1: Bugfix:     o Fixed jsv_ge test
+                             o Fixed xml qhost test
+                 Cleanup:    o Also delete created tmp directories
+                 Enhancem.:  o sumbit_job can now exclude errors
+                 Review:     MD, JG (TB: hedeby patch run)
+
 TB-2009-03-30-1: Bugfix:     Test for issue 619 now cleans up spool dir files
                  Enhancem:   SI use case test submits array jobs as performance
                              improvement
